[package]
name = "toons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.2", features = ["derive"] }
serde_json = "1.0.114"
rfesi = "0.42.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.11.26"
serde_qs = "0.12.0"
terminal-link = "0.1.0"
format_num = "0.1.0"
chrono = "0.4.35"
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
log = "0.4.21"
futures = "0.3.30"
dotenv = "0.15.0"
